# 641-music-recsys

./: .gitignore  EDA_recsys.ipynb  README.md  data.dvc  prepare_data.py  pyproject.toml
.dvc/: config
docs/: methods-notes.md
results/: als-baseline.md  item-knn-baseline.md  popularity-baseline.md  reranker-sweep-global.csv  reranker-sweep-user.csv  reranker-sweep.csv  reranker-sweep.md
src/: als.py  candidate_cache.py  item-knn.py  metrics.py  popularity.py  processed.dvc  reranker.py  reranker_v2.py  test-reranker.py  test_reranker_v2.py
