[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "641-music-rec"
version = "0.1.0"
description = "Auditing collaborative filtering recommenders for bias propagation on Last.fm listening data, built with LensKit."
readme = "README.md"
requires-python = "==3.12.5"
dependencies = [
  "lenskit ~=2026.1",
  "pandas >=2",
  "numpy >=2",
  "matplotlib >=3.8",
  "seaborn >=0.13",
  "pyprojroot >=0.3",
  "dvc[gs]>=3.67.1",
  "dvc-gs>=3.0.2",
  "path>=17.1.1",
  "pathlib>=1.0.1",
  "ipykernel>=7.2.0",
  "implicit>=0.7.3",
]

[dependency-groups]
# development dependencies for working on the code, but are not needed to run it
dev = [
  # linting and formatting support
  "pre-commit ~= 4.0",
  "ruff >=0.8",
  # ipython tools for interaction
  "ipython >=8",
  "jupyterlab >=3",
  # tools for inspecting common data files
  "parquet-tools >=0.2",
  "visidata >=3",
  # this is super useful for profiling code
  "line_profiler ~=4.1; platform_machine != 'aarch64'",
]

[tool.uv]
python-preference = "managed"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".git", "__pycache__", "build", "dist", "*/tests/*", ".pixi/*"]

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["F403", "F405"]

[tool.pyright]
exclude = [".pixi/*", ".venv/*", "data/*"]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
